tdf#137310 ODF import: fix loading of images with multiple slashes in path

Regression from commit 1b02ba03bd62a712e15c15384a3d105d2c088120 (shapes:
don't use "GraphicURL" property, always use "Graphic", 2018-02-13), the
problem was that now the loading of Models/Fallbacks/duck.png goes via
SvXMLGraphicHelper::ImplGetGraphicStream(), which assumed that the
directory part of the picture path contains no slashes, so can be
handled via ImplGetGraphicStorage().

That functions works with Pictures/something.png, but not with
Models/Fallbacks/duck.png.

Fix the problem by using openStreamElementByHierarchicalName() to open
the picture stream in case we got no stream and the storage name
contains a slash.

(cherry picked from commit 56f593c9aa00f87fb8780060fece991b91b5c0a7)

Change-Id: I0e04fb4286777b04286c4979af31e6df19988873
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/121348
Tested-by: Jenkins
Reviewed-by: Tomaž Vajngerl <quikee@gmail.com>